# ppb-boxscore-parser

./: .gitignore  README.md  pyproject.toml
game_events_templates/: game_events_template.csv  game_events_template_with_examples.csv
gamebox/: __init__.py  models.py  parser.py
tests/: test_parser.py
