[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamebox-parser"
version = "0.1.0"
description = "Table-driven baseball event parser"
authors = [{name="You"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
